--- a/package.json
+++ b/package.json
@@ -32,5 +32,8 @@
     "typescript-eslint": "^8.40.0",
     "vite": "^7.1.2",
     "vite-plugin-electron": "^0.29.0"
+  },
+  "dependencies": {
+    "pdf-lib": "^1.17.1"
   }
 }
